--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -63,6 +63,26 @@
                 </div>
             </div>
         </div>
+        <div id="projects-container" class="container projects" (click)="getToFront('projects-container')">
+            <div class="content">
+                <div class="container-title">Projects</div>
+                <div class="projects-list">
+                    <div class="list-item">
+                        <a class="link" href="https://glittery-cendol-8608a4.netlify.app/">Amazon website clone</a> -
+                        (<a href="https://www.amazon.com/">Amazon.com</a> for reference)
+                    </div>
+                    <div class="list-item">
+                        <a class="link" href="https://gympal-fit.netlify.app/">Fitness App</a>  (In progress) 
+                    </div>
+                    <div class="list-item">
+                        <a class="link" href="https://ejs-blog-production.up.railway.app/">Practice NodeJs + EJS blog</a>
+                    </div>
+                    <div class="list-item">
+                        <a class="link" href="https://melodic-gecko-baf2cf.netlify.app/">Virtual Keyboard</a>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div id="experience-container" class="container experience" (click)="getToFront('experience-container')">
             <div class="content">
                 <div class="container-title">Experience</div>
