fix: open all links in new tabs

--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -17,7 +17,7 @@
                 <div class="profile-list">
                     <div class="list-item bold">Name</div><div class="list-item">Evelyne Gluzman</div>
                     <div class="list-item bold">Profession</div><div class="list-item">Web Developer</div>
-                    <div class="list-item bold">Resume</div><div class="list-item"><a class="link" href="../../../assets/files/evelyne_resume.pdf">View Resume</a></div>
+                    <div class="list-item bold">Resume</div><div class="list-item"><a class="link" href="../../../assets/files/evelyne_resume.pdf" target=”_blank”>View Resume</a></div>
                     <div class="list-item bold">Contact</div>
                     <div class="list-item icons">
                         <a href="https://github.com/evelyne802" target=”_blank”>
@@ -68,17 +68,17 @@
                 <div class="container-title">Projects</div>
                 <div class="projects-list">
                     <div class="list-item">
-                        <a class="link" href="https://glittery-cendol-8608a4.netlify.app/">Amazon website clone</a> -
-                        (<a href="https://www.amazon.com/">Amazon.com</a> for reference)
+                        <a class="link" href="https://glittery-cendol-8608a4.netlify.app/" target=”_blank”>Amazon website clone</a> -
+                        (<a href="https://www.amazon.com/" target=”_blank”>Amazon.com</a> for reference)
                     </div>
                     <div class="list-item">
-                        <a class="link" href="https://gympal-fit.netlify.app/">Fitness App</a>  (In progress) 
+                        <a class="link" href="https://gympal-fit.netlify.app/" target=”_blank”>Fitness App</a>  (In progress) 
                     </div>
                     <div class="list-item">
-                        <a class="link" href="https://ejs-blog-production.up.railway.app/">Practice NodeJs + EJS blog</a>
+                        <a class="link" href="https://ejs-blog-production.up.railway.app/" target=”_blank”>Practice NodeJs + EJS blog</a>
                     </div>
                     <div class="list-item">
-                        <a class="link" href="https://melodic-gecko-baf2cf.netlify.app/">Virtual Keyboard</a>
+                        <a class="link" href="https://melodic-gecko-baf2cf.netlify.app/" target=”_blank”>Virtual Keyboard</a>
                     </div>
                 </div>
             </div>
