fix: new resume file

--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -47,10 +47,10 @@
                     <div class="list-item">TypeScript</div>
                     <div class="list-item">JavaScript</div>
                     <div class="list-item">Angular</div>
-                    <div class="list-item">HTML</div>
-                    <div class="list-item">CSS</div>
-                    <div class="list-item">NodeJs</div>
                     <div class="list-item">SQL</div>
+                    <div class="list-item">HTML & CSS</div>
+                    <div class="list-item">NodeJs</div>
+                    <div class="list-item">Git</div>
                     <div class="list-item">Python</div>
                 </div>
             </div>
