--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -2,7 +2,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.12.2/lottie.min.js"></script>
 </head>
 <body>
-    <div class="background">
+    <div id="background" class="background">
         <div id="backdrop" class="backdrop">
             <div class="loading-bar">
                 <div id="progress-bar" class="progress-bar"></div>
