--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -75,6 +75,9 @@
                         <a class="link" href="https://gympal-fit.netlify.app/" target=”_blank”>Fitness App</a>  (In progress) 
                     </div>
                     <div class="list-item">
+                        <a class="link" href="https://the-most-accurate-ats-there-is.netlify.app/" target=”_blank”>The most accurate ATS</a>
+                    </div>
+                    <div class="list-item">
                         <a class="link" href="https://ejs-blog-production.up.railway.app/" target=”_blank”>Practice NodeJs + EJS blog</a>
                     </div>
                     <div class="list-item">
